docs/upbound-provider-aws/1.6/apigatewayv2/v1beta1/stage.md
---
permalink: /upbound-provider-aws/1.6/apigatewayv2/v1beta1/stage/
---

# apigatewayv2.v1beta1.stage

"Stage is the Schema for the Stages API. Manages an Amazon API Gateway Version 2 stage."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAccessLogSettings(accessLogSettings)`](#fn-specforproviderwithaccesslogsettings)
    * [`fn withAccessLogSettingsMixin(accessLogSettings)`](#fn-specforproviderwithaccesslogsettingsmixin)
    * [`fn withApiId(apiId)`](#fn-specforproviderwithapiid)
    * [`fn withAutoDeploy(autoDeploy)`](#fn-specforproviderwithautodeploy)
    * [`fn withClientCertificateId(clientCertificateId)`](#fn-specforproviderwithclientcertificateid)
    * [`fn withDefaultRouteSettings(defaultRouteSettings)`](#fn-specforproviderwithdefaultroutesettings)
    * [`fn withDefaultRouteSettingsMixin(defaultRouteSettings)`](#fn-specforproviderwithdefaultroutesettingsmixin)
    * [`fn withDeploymentId(deploymentId)`](#fn-specforproviderwithdeploymentid)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withRouteSettings(routeSettings)`](#fn-specforproviderwithroutesettings)
    * [`fn withRouteSettingsMixin(routeSettings)`](#fn-specforproviderwithroutesettingsmixin)
    * [`fn withStageVariables(stageVariables)`](#fn-specforproviderwithstagevariables)
    * [`fn withStageVariablesMixin(stageVariables)`](#fn-specforproviderwithstagevariablesmixin)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`obj spec.forProvider.accessLogSettings`](#obj-specforprovideraccesslogsettings)
      * [`fn withDestinationArn(destinationArn)`](#fn-specforprovideraccesslogsettingswithdestinationarn)
      * [`fn withFormat(format)`](#fn-specforprovideraccesslogsettingswithformat)
    * [`obj spec.forProvider.apiIdRef`](#obj-specforproviderapiidref)
      * [`fn withName(name)`](#fn-specforproviderapiidrefwithname)
      * [`obj spec.forProvider.apiIdRef.policy`](#obj-specforproviderapiidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapiidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapiidrefpolicywithresolve)
    * [`obj spec.forProvider.apiIdSelector`](#obj-specforproviderapiidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderapiidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderapiidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderapiidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.apiIdSelector.policy`](#obj-specforproviderapiidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapiidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapiidselectorpolicywithresolve)
    * [`obj spec.forProvider.defaultRouteSettings`](#obj-specforproviderdefaultroutesettings)
      * [`fn withDataTraceEnabled(dataTraceEnabled)`](#fn-specforproviderdefaultroutesettingswithdatatraceenabled)
      * [`fn withDetailedMetricsEnabled(detailedMetricsEnabled)`](#fn-specforproviderdefaultroutesettingswithdetailedmetricsenabled)
      * [`fn withLoggingLevel(loggingLevel)`](#fn-specforproviderdefaultroutesettingswithlogginglevel)
      * [`fn withThrottlingBurstLimit(throttlingBurstLimit)`](#fn-specforproviderdefaultroutesettingswiththrottlingburstlimit)
      * [`fn withThrottlingRateLimit(throttlingRateLimit)`](#fn-specforproviderdefaultroutesettingswiththrottlingratelimit)
    * [`obj spec.forProvider.deploymentIdRef`](#obj-specforproviderdeploymentidref)
      * [`fn withName(name)`](#fn-specforproviderdeploymentidrefwithname)
      * [`obj spec.forProvider.deploymentIdRef.policy`](#obj-specforproviderdeploymentidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdeploymentidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdeploymentidrefpolicywithresolve)
    * [`obj spec.forProvider.deploymentIdSelector`](#obj-specforproviderdeploymentidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdeploymentidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdeploymentidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdeploymentidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.deploymentIdSelector.policy`](#obj-specforproviderdeploymentidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdeploymentidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdeploymentidselectorpolicywithresolve)
    * [`obj spec.forProvider.routeSettings`](#obj-specforproviderroutesettings)
      * [`fn withDataTraceEnabled(dataTraceEnabled)`](#fn-specforproviderroutesettingswithdatatraceenabled)
      * [`fn withDetailedMetricsEnabled(detailedMetricsEnabled)`](#fn-specforproviderroutesettingswithdetailedmetricsenabled)
      * [`fn withLoggingLevel(loggingLevel)`](#fn-specforproviderroutesettingswithlogginglevel)
      * [`fn withRouteKey(routeKey)`](#fn-specforproviderroutesettingswithroutekey)
      * [`fn withThrottlingBurstLimit(throttlingBurstLimit)`](#fn-specforproviderroutesettingswiththrottlingburstlimit)
      * [`fn withThrottlingRateLimit(throttlingRateLimit)`](#fn-specforproviderroutesettingswiththrottlingratelimit)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAccessLogSettings(accessLogSettings)`](#fn-specinitproviderwithaccesslogsettings)
    * [`fn withAccessLogSettingsMixin(accessLogSettings)`](#fn-specinitproviderwithaccesslogsettingsmixin)
    * [`fn withApiId(apiId)`](#fn-specinitproviderwithapiid)
    * [`fn withAutoDeploy(autoDeploy)`](#fn-specinitproviderwithautodeploy)
    * [`fn withClientCertificateId(clientCertificateId)`](#fn-specinitproviderwithclientcertificateid)
    * [`fn withDefaultRouteSettings(defaultRouteSettings)`](#fn-specinitproviderwithdefaultroutesettings)
    * [`fn withDefaultRouteSettingsMixin(defaultRouteSettings)`](#fn-specinitproviderwithdefaultroutesettingsmixin)
    * [`fn withDeploymentId(deploymentId)`](#fn-specinitproviderwithdeploymentid)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withRouteSettings(routeSettings)`](#fn-specinitproviderwithroutesettings)
    * [`fn withRouteSettingsMixin(routeSettings)`](#fn-specinitproviderwithroutesettingsmixin)
    * [`fn withStageVariables(stageVariables)`](#fn-specinitproviderwithstagevariables)
    * [`fn withStageVariablesMixin(stageVariables)`](#fn-specinitproviderwithstagevariablesmixin)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`obj spec.initProvider.accessLogSettings`](#obj-specinitprovideraccesslogsettings)
      * [`fn withDestinationArn(destinationArn)`](#fn-specinitprovideraccesslogsettingswithdestinationarn)
      * [`fn withFormat(format)`](#fn-specinitprovideraccesslogsettingswithformat)
    * [`obj spec.initProvider.apiIdRef`](#obj-specinitproviderapiidref)
      * [`fn withName(name)`](#fn-specinitproviderapiidrefwithname)
      * [`obj spec.initProvider.apiIdRef.policy`](#obj-specinitproviderapiidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderapiidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderapiidrefpolicywithresolve)
    * [`obj spec.initProvider.apiIdSelector`](#obj-specinitproviderapiidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderapiidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderapiidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderapiidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.apiIdSelector.policy`](#obj-specinitproviderapiidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderapiidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderapiidselectorpolicywithresolve)
    * [`obj spec.initProvider.defaultRouteSettings`](#obj-specinitproviderdefaultroutesettings)
      * [`fn withDataTraceEnabled(dataTraceEnabled)`](#fn-specinitproviderdefaultroutesettingswithdatatraceenabled)
      * [`fn withDetailedMetricsEnabled(detailedMetricsEnabled)`](#fn-specinitproviderdefaultroutesettingswithdetailedmetricsenabled)
      * [`fn withLoggingLevel(loggingLevel)`](#fn-specinitproviderdefaultroutesettingswithlogginglevel)
      * [`fn withThrottlingBurstLimit(throttlingBurstLimit)`](#fn-specinitproviderdefaultroutesettingswiththrottlingburstlimit)
      * [`fn withThrottlingRateLimit(throttlingRateLimit)`](#fn-specinitproviderdefaultroutesettingswiththrottlingratelimit)
    * [`obj spec.initProvider.deploymentIdRef`](#obj-specinitproviderdeploymentidref)
      * [`fn withName(name)`](#fn-specinitproviderdeploymentidrefwithname)
      * [`obj spec.initProvider.deploymentIdRef.policy`](#obj-specinitproviderdeploymentidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdeploymentidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdeploymentidrefpolicywithresolve)
    * [`obj spec.initProvider.deploymentIdSelector`](#obj-specinitproviderdeploymentidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdeploymentidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdeploymentidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdeploymentidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.deploymentIdSelector.policy`](#obj-specinitproviderdeploymentidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdeploymentidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdeploymentidselectorpolicywithresolve)
    * [`obj spec.initProvider.routeSettings`](#obj-specinitproviderroutesettings)
      * [`fn withDataTraceEnabled(dataTraceEnabled)`](#fn-specinitproviderroutesettingswithdatatraceenabled)
      * [`fn withDetailedMetricsEnabled(detailedMetricsEnabled)`](#fn-specinitproviderroutesettingswithdetailedmetricsenabled)
      * [`fn withLoggingLevel(loggingLevel)`](#fn-specinitproviderroutesettingswithlogginglevel)
      * [`fn withRouteKey(routeKey)`](#fn-specinitproviderroutesettingswithroutekey)
      * [`fn withThrottlingBurstLimit(throttlingBurstLimit)`](#fn-specinitproviderroutesettingswiththrottlingburstlimit)
      * [`fn withThrottlingRateLimit(throttlingRateLimit)`](#fn-specinitproviderroutesettingswiththrottlingratelimit)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Stage

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"StageSpec defines the desired state of Stage"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAccessLogSettings

```ts
withAccessLogSettings(accessLogSettings)
```

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

### fn spec.forProvider.withAccessLogSettingsMixin

```ts
withAccessLogSettingsMixin(accessLogSettings)
```

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withApiId

```ts
withApiId(apiId)
```

"API identifier."

### fn spec.forProvider.withAutoDeploy

```ts
withAutoDeploy(autoDeploy)
```

"Whether updates to an API automatically trigger a new deployment. Defaults to false. Applicable for HTTP APIs."

### fn spec.forProvider.withClientCertificateId

```ts
withClientCertificateId(clientCertificateId)
```

"Identifier of a client certificate for the stage. Use the aws_api_gateway_client_certificate resource to configure a client certificate.\nSupported only for WebSocket APIs."

### fn spec.forProvider.withDefaultRouteSettings

```ts
withDefaultRouteSettings(defaultRouteSettings)
```

"Default route settings for the stage."

### fn spec.forProvider.withDefaultRouteSettingsMixin

```ts
withDefaultRouteSettingsMixin(defaultRouteSettings)
```

"Default route settings for the stage."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withDeploymentId

```ts
withDeploymentId(deploymentId)
```

"Deployment identifier of the stage. Use the aws_apigatewayv2_deployment resource to configure a deployment."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Description for the stage. Must be less than or equal to 1024 characters in length."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withRouteSettings

```ts
withRouteSettings(routeSettings)
```

"Route settings for the stage."

### fn spec.forProvider.withRouteSettingsMixin

```ts
withRouteSettingsMixin(routeSettings)
```

"Route settings for the stage."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withStageVariables

```ts
withStageVariables(stageVariables)
```

"Map that defines the stage variables for the stage."

### fn spec.forProvider.withStageVariablesMixin

```ts
withStageVariablesMixin(stageVariables)
```

"Map that defines the stage variables for the stage."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.accessLogSettings

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

### fn spec.forProvider.accessLogSettings.withDestinationArn

```ts
withDestinationArn(destinationArn)
```

"ARN of the CloudWatch Logs log group to receive access logs. Any trailing :* is trimmed from the ARN."

### fn spec.forProvider.accessLogSettings.withFormat

```ts
withFormat(format)
```

"Single line format of the access logs of data. Refer to log settings for HTTP or Websocket."

## obj spec.forProvider.apiIdRef

"Reference to a API in apigatewayv2 to populate apiId."

### fn spec.forProvider.apiIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.apiIdRef.policy

"Policies for referencing."

### fn spec.forProvider.apiIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.apiIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.apiIdSelector

"Selector for a API in apigatewayv2 to populate apiId."

### fn spec.forProvider.apiIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.apiIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.apiIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.apiIdSelector.policy

"Policies for selection."

### fn spec.forProvider.apiIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.apiIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.defaultRouteSettings

"Default route settings for the stage."

### fn spec.forProvider.defaultRouteSettings.withDataTraceEnabled

```ts
withDataTraceEnabled(dataTraceEnabled)
```

"Whether data trace logging is enabled for the default route. Affects the log entries pushed to Amazon CloudWatch Logs.\nDefaults to false. Supported only for WebSocket APIs."

### fn spec.forProvider.defaultRouteSettings.withDetailedMetricsEnabled

```ts
withDetailedMetricsEnabled(detailedMetricsEnabled)
```

"Whether detailed metrics are enabled for the default route. Defaults to false."

### fn spec.forProvider.defaultRouteSettings.withLoggingLevel

```ts
withLoggingLevel(loggingLevel)
```

"Logging level for the default route. Affects the log entries pushed to Amazon CloudWatch Logs.\nValid values: ERROR, INFO, OFF. Defaults to OFF. Supported only for WebSocket APIs."

### fn spec.forProvider.defaultRouteSettings.withThrottlingBurstLimit

```ts
withThrottlingBurstLimit(throttlingBurstLimit)
```

"Throttling burst limit for the default route."

### fn spec.forProvider.defaultRouteSettings.withThrottlingRateLimit

```ts
withThrottlingRateLimit(throttlingRateLimit)
```

"Throttling rate limit for the default route."

## obj spec.forProvider.deploymentIdRef

"Reference to a Deployment in apigatewayv2 to populate deploymentId."

### fn spec.forProvider.deploymentIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.deploymentIdRef.policy

"Policies for referencing."

### fn spec.forProvider.deploymentIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.deploymentIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.deploymentIdSelector

"Selector for a Deployment in apigatewayv2 to populate deploymentId."

### fn spec.forProvider.deploymentIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.deploymentIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.deploymentIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.deploymentIdSelector.policy

"Policies for selection."

### fn spec.forProvider.deploymentIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.deploymentIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.routeSettings

"Route settings for the stage."

### fn spec.forProvider.routeSettings.withDataTraceEnabled

```ts
withDataTraceEnabled(dataTraceEnabled)
```

"Whether data trace logging is enabled for the route. Affects the log entries pushed to Amazon CloudWatch Logs.\nDefaults to false. Supported only for WebSocket APIs."

### fn spec.forProvider.routeSettings.withDetailedMetricsEnabled

```ts
withDetailedMetricsEnabled(detailedMetricsEnabled)
```

"Whether detailed metrics are enabled for the route. Defaults to false."

### fn spec.forProvider.routeSettings.withLoggingLevel

```ts
withLoggingLevel(loggingLevel)
```

"Logging level for the route. Affects the log entries pushed to Amazon CloudWatch Logs.\nValid values: ERROR, INFO, OFF. Defaults to OFF. Supported only for WebSocket APIs."

### fn spec.forProvider.routeSettings.withRouteKey

```ts
withRouteKey(routeKey)
```

"Route key."

### fn spec.forProvider.routeSettings.withThrottlingBurstLimit

```ts
withThrottlingBurstLimit(throttlingBurstLimit)
```

"Throttling burst limit for the route."

### fn spec.forProvider.routeSettings.withThrottlingRateLimit

```ts
withThrottlingRateLimit(throttlingRateLimit)
```

"Throttling rate limit for the route."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAccessLogSettings

```ts
withAccessLogSettings(accessLogSettings)
```

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

### fn spec.initProvider.withAccessLogSettingsMixin

```ts
withAccessLogSettingsMixin(accessLogSettings)
```

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withApiId

```ts
withApiId(apiId)
```

"API identifier."

### fn spec.initProvider.withAutoDeploy

```ts
withAutoDeploy(autoDeploy)
```

"Whether updates to an API automatically trigger a new deployment. Defaults to false. Applicable for HTTP APIs."

### fn spec.initProvider.withClientCertificateId

```ts
withClientCertificateId(clientCertificateId)
```

"Identifier of a client certificate for the stage. Use the aws_api_gateway_client_certificate resource to configure a client certificate.\nSupported only for WebSocket APIs."

### fn spec.initProvider.withDefaultRouteSettings

```ts
withDefaultRouteSettings(defaultRouteSettings)
```

"Default route settings for the stage."

### fn spec.initProvider.withDefaultRouteSettingsMixin

```ts
withDefaultRouteSettingsMixin(defaultRouteSettings)
```

"Default route settings for the stage."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withDeploymentId

```ts
withDeploymentId(deploymentId)
```

"Deployment identifier of the stage. Use the aws_apigatewayv2_deployment resource to configure a deployment."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Description for the stage. Must be less than or equal to 1024 characters in length."

### fn spec.initProvider.withRouteSettings

```ts
withRouteSettings(routeSettings)
```

"Route settings for the stage."

### fn spec.initProvider.withRouteSettingsMixin

```ts
withRouteSettingsMixin(routeSettings)
```

"Route settings for the stage."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withStageVariables

```ts
withStageVariables(stageVariables)
```

"Map that defines the stage variables for the stage."

### fn spec.initProvider.withStageVariablesMixin

```ts
withStageVariablesMixin(stageVariables)
```

"Map that defines the stage variables for the stage."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.accessLogSettings

"Settings for logging access in this stage.\nUse the aws_api_gateway_account resource to configure permissions for CloudWatch Logging."

### fn spec.initProvider.accessLogSettings.withDestinationArn

```ts
withDestinationArn(destinationArn)
```

"ARN of the CloudWatch Logs log group to receive access logs. Any trailing :* is trimmed from the ARN."

### fn spec.initProvider.accessLogSettings.withFormat

```ts
withFormat(format)
```

"Single line format of the access logs of data. Refer to log settings for HTTP or Websocket."

## obj spec.initProvider.apiIdRef

"Reference to a API in apigatewayv2 to populate apiId."

### fn spec.initProvider.apiIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.apiIdRef.policy

"Policies for referencing."

### fn spec.initProvider.apiIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.apiIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.apiIdSelector

"Selector for a API in apigatewayv2 to populate apiId."

### fn spec.initProvider.apiIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.apiIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.apiIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.apiIdSelector.policy

"Policies for selection."

### fn spec.initProvider.apiIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.apiIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.defaultRouteSettings

"Default route settings for the stage."

### fn spec.initProvider.defaultRouteSettings.withDataTraceEnabled

```ts
withDataTraceEnabled(dataTraceEnabled)
```

"Whether data trace logging is enabled for the default route. Affects the log entries pushed to Amazon CloudWatch Logs.\nDefaults to false. Supported only for WebSocket APIs."

### fn spec.initProvider.defaultRouteSettings.withDetailedMetricsEnabled

```ts
withDetailedMetricsEnabled(detailedMetricsEnabled)
```

"Whether detailed metrics are enabled for the default route. Defaults to false."

### fn spec.initProvider.defaultRouteSettings.withLoggingLevel

```ts
withLoggingLevel(loggingLevel)
```

"Logging level for the default route. Affects the log entries pushed to Amazon CloudWatch Logs.\nValid values: ERROR, INFO, OFF. Defaults to OFF. Supported only for WebSocket APIs."

### fn spec.initProvider.defaultRouteSettings.withThrottlingBurstLimit

```ts
withThrottlingBurstLimit(throttlingBurstLimit)
```

"Throttling burst limit for the default route."

### fn spec.initProvider.defaultRouteSettings.withThrottlingRateLimit

```ts
withThrottlingRateLimit(throttlingRateLimit)
```

"Throttling rate limit for the default route."

## obj spec.initProvider.deploymentIdRef

"Reference to a Deployment in apigatewayv2 to populate deploymentId."

### fn spec.initProvider.deploymentIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.deploymentIdRef.policy

"Policies for referencing."

### fn spec.initProvider.deploymentIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.deploymentIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.deploymentIdSelector

"Selector for a Deployment in apigatewayv2 to populate deploymentId."

### fn spec.initProvider.deploymentIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.deploymentIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.deploymentIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.deploymentIdSelector.policy

"Policies for selection."

### fn spec.initProvider.deploymentIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.deploymentIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.routeSettings

"Route settings for the stage."

### fn spec.initProvider.routeSettings.withDataTraceEnabled

```ts
withDataTraceEnabled(dataTraceEnabled)
```

"Whether data trace logging is enabled for the route. Affects the log entries pushed to Amazon CloudWatch Logs.\nDefaults to false. Supported only for WebSocket APIs."

### fn spec.initProvider.routeSettings.withDetailedMetricsEnabled

```ts
withDetailedMetricsEnabled(detailedMetricsEnabled)
```

"Whether detailed metrics are enabled for the route. Defaults to false."

### fn spec.initProvider.routeSettings.withLoggingLevel

```ts
withLoggingLevel(loggingLevel)
```

"Logging level for the route. Affects the log entries pushed to Amazon CloudWatch Logs.\nValid values: ERROR, INFO, OFF. Defaults to OFF. Supported only for WebSocket APIs."

### fn spec.initProvider.routeSettings.withRouteKey

```ts
withRouteKey(routeKey)
```

"Route key."

### fn spec.initProvider.routeSettings.withThrottlingBurstLimit

```ts
withThrottlingBurstLimit(throttlingBurstLimit)
```

"Throttling burst limit for the route."

### fn spec.initProvider.routeSettings.withThrottlingRateLimit

```ts
withThrottlingRateLimit(throttlingRateLimit)
```

"Throttling rate limit for the route."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."